--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,15 @@
 isolated_build = true
 envlist = black, flake8, py311
 
+[black]
+line-length = 120
+
 [testenv:black]
 deps = black
 commands = black --check src tests
+
+[flake8]
+max-line-length = 120
 
 [testenv:flake8]
 deps = flake8
@@ -12,4 +18,4 @@ commands = flake8 src tests
 
 [testenv:py311]
 deps = -rrequirements.txt
-commands = pytest
+commands = pytest -s
