add 2 example answers

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ line-length = 120
 
 [testenv:black]
 deps = black
-commands = black --check src tests
+commands = black --check src tests setup.py
 
 [flake8]
 max-line-length = 120
